[gd_scene load_steps=7 format=3 uid="uid://game_session"]

[ext_resource type="Script" path="res://scripts/core/game_session.gd" id="1_session"]
[ext_resource type="Script" path="res://scripts/stage/camera_controller.gd" id="2_camera"]
[ext_resource type="Script" path="res://scripts/core/pathfinding_manager.gd" id="3_pathfinding"]
[ext_resource type="Script" path="res://scripts/stage/grid_system.gd" id="4_grid"]
[ext_resource type="Script" path="res://scripts/stage/stage_zones.gd" id="5_zones"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_stage"]
vertices = PackedVector2Array(-950, -600, 950, -600, 950, 500, -950, 500)
polygons = [PackedInt32Array(0, 1, 2, 3)]
outlines = [PackedVector2Array(-950, -600, 950, -600, 950, 500, -950, 500)]

[node name="GameSession" type="Node2D"]
script = ExtResource("1_session")

[node name="StageLayout" type="Node2D" parent="."]

[node name="StageZones" type="Node2D" parent="StageLayout"]
script = ExtResource("5_zones")

[node name="GridOverlay" type="Node2D" parent="StageLayout"]
script = ExtResource("4_grid")
grid_size = Vector2i(32, 20)
cell_size = 50.0

[node name="Stagehands" type="Node2D" parent="StageLayout"]

[node name="Props" type="Node2D" parent="StageLayout"]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_stage")

[node name="PathfindingManager" type="Node" parent="."]
script = ExtResource("3_pathfinding")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_camera")
